--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
+uuid = { version = "1.0", features = ["v4"] }
+dashmap = "5.5"
+names = "0.14"
+futures-util = "0.3"
+rmp-serde = "1.1"
+serde = { version = "1.0", features = ["derive"] }
