--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ names = "0.14"
 futures-util = "0.3"
 rmp-serde = "1.1"
 serde = { version = "1.0", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
