--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rmp-serde = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+base64 = "0.22"
